# client-rs

./: CHANGELOG.md  Cargo.toml  README.md  justfile
examples/: ping.rs  rx.rs  tx.rs
examples/common/: mod.rs
src/: client.rs  codec.rs  connect.rs  discovery.rs  dongle.rs  errors.rs  lib.rs  protocol.rs  retry.rs  session.rs  transport.rs
tests/: vectors.rs
